tests/ui/pattern/usefulness/empty-match-check-notes.normal.stderr
error: unreachable pattern
  --> $DIR/empty-match-check-notes.rs:17:9
   |
LL |         _ => {}
   |         ^------
   |         |
   |         matches no values because `EmptyEnum` is uninhabited
   |         help: remove the match arm
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types
note: the lint level is defined here
  --> $DIR/empty-match-check-notes.rs:7:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/empty-match-check-notes.rs:22:9
   |
LL |         _ if false => {}
   |         ^---------------
   |         |
   |         matches no values because `EmptyEnum` is uninhabited
   |         help: remove the match arm
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error: unreachable pattern
  --> $DIR/empty-match-check-notes.rs:31:9
   |
LL |         _ => {}
   |         ^------
   |         |
   |         matches no values because `EmptyForeignEnum` is uninhabited
   |         help: remove the match arm
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error: unreachable pattern
  --> $DIR/empty-match-check-notes.rs:36:9
   |
LL |         _ if false => {}
   |         ^---------------
   |         |
   |         matches no values because `EmptyForeignEnum` is uninhabited
   |         help: remove the match arm
   |
   = note: to learn more about uninhabited types, see https://doc.rust-lang.org/nomicon/exotic-sizes.html#empty-types

error[E0005]: refutable pattern in local binding
  --> $DIR/empty-match-check-notes.rs:43:9
   |
LL |     let None = *x;
   |         ^^^^ pattern `Some(_)` not covered
   |
   = note: `let` bindings require an "irrefutable pattern", like a `struct` or an `enum` with only one variant
   = note: for more information, visit https://doc.rust-lang.org/book/ch19-02-refutability.html
   = note: pattern `Some(_)` is currently uninhabited, but this variant contains private fields which may become inhabited in the future
   = note: the matched value is of type `Option<SecretlyUninhabitedForeignStruct>`
help: you might want to use `if let` to ignore the variant that isn't matched
   |
LL |     if let None = *x { todo!() };
   |     ++               +++++++++++

error[E0004]: non-exhaustive patterns: `0_u8..=u8::MAX` not covered
  --> $DIR/empty-match-check-notes.rs:53:11
   |
LL |     match 0u8 {
   |           ^^^ pattern `0_u8..=u8::MAX` not covered
   |
   = note: the matched value is of type `u8`
   = note: match arms with guards don't count towards exhaustivity
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         _ if false => {},
LL +         0_u8..=u8::MAX => todo!()
   |

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0004, E0005.
For more information about an error, try `rustc --explain E0004`.
